--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,12 +38,6 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.annotation:annotation:1.2.0'
-    implementation 'androidx.core:core-ktx:1.5.0'
-//    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'com.github.marlonlom:timeago:4.0.3'
-
-    //noinspection GradleCompatible
-    implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'com.github.marlonlom:timeago:4.0.3'
 
     //noinspection GradleCompatible
@@ -78,33 +72,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.google.firebase:firebase-dynamic-module-support:16.0.0-beta01'
     implementation 'com.google.android.material:material:1.3.0'
-//    implementation 'android-support-v7-appcompat:23.1.1'
-    implementation 'androidx.annotation:annotation:1.2.0'
-    implementation 'androidx.viewpager:viewpager:1.0.0'
-    implementation 'org.jetbrains:annotations:15.0'
-    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    testImplementation 'junit:junit:4.13.2'
     implementation 'com.google.firebase:firebase-database:20.0.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.google.firebase:firebase-core:19.0.0'
-    implementation 'com.google.firebase:firebase-auth:21.0.1'
-    implementation 'com.google.android.gms:play-services-auth:19.0.0'
-    implementation 'com.google.firebase:firebase-database:20.0.0'
-    implementation 'com.google.firebase:firebase-analytics:19.0.0'
-    implementation 'com.firebaseui:firebase-ui:0.6.2'
-    implementation platform('com.google.firebase:firebase-bom:28.1.0')
-    implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.firebase:firebase-firestore'
-    implementation 'com.google.firebase:firebase-dynamic-module-support:16.0.0-beta01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.rey5137:material:1.3.1'
     implementation 'io.github.pilgr:paperdb:2.7.1'
@@ -119,11 +90,24 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.2'
     implementation 'com.google.firebase:firebase-firestore:22.1.2'
-
+    implementation 'com.karumi:dexter:6.2.1'
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 //    implementation 'br.com.simplepass:loading-button-android:2.2.0'
-   // implementation 'com.google.firebase:firebase-auth:19.3.0'
-    //implementation 'com.google.firebase:firebase-firestore:21.4.2'
-    //implementation 'com.google.firebase:firebase-storage:19.1.1'
     //lottie-dependency
     implementation 'com.airbnb.android:lottie:3.4.1'
+
+    implementation 'com.google.firebase:firebase-analytics:17.6.0'
+    implementation 'com.google.firebase:firebase-auth:19.4.0'
+    implementation 'com.google.firebase:firebase-database:19.5.0'
+    implementation 'com.google.firebase:firebase-storage:19.2.0'
+    implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
 }
+
+apply plugin: 'com.google.gms.google-services'
