--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Consult">
-        <activity android:name=".ui.SplashScreen"
+
+        <activity android:name=".ui.GroupChatActivity" android:theme="@style/NoActionBarTheme" />
+
+        <activity
+            android:name=".ui.SplashScreen"
             android:theme="@style/NoActionBarTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -24,53 +27,61 @@
         <activity android:name=".ui.TaskActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.consult.ui.TasksActivity">
-            </meta-data>
+                android:value="com.moringaschool.consult.ui.TasksActivity" />
         </activity>
 
         <activity android:name=".ui.TasksActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.consult.ui.Dashboard">
-            </meta-data>
+                android:value="com.moringaschool.consult.ui.Dashboard" />
         </activity>
+
         <activity android:name=".ui.WeekViewActivity" />
+
         <activity android:name=".ui.EventEditActivity" />
+
+        <activity android:name=".ui.MessageActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.moringaschool.consult.ui.TextActivity" />
+        </activity>
+
         <activity android:name=".ui.UserDetails">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.consult.ui.UserProfile">
-            </meta-data>
+                android:value="com.moringaschool.consult.ui.UserProfile" />
         </activity>
+
         <activity android:name=".ui.UserProfile">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.consult.ui.Dashboard">
-            </meta-data>
+                android:value="com.moringaschool.consult.ui.Dashboard" />
         </activity>
-        <activity android:name=".ui.Dashboard"></activity>
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".ui.Dashboard" />
+
+        <activity android:name=".ui.TextActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.consult.ui.Dashboard">
-            </meta-data>
+                android:value="com.moringaschool.consult.ui.Dashboard" />
         </activity>
-        <activity android:name=".ui.LoginActivity" android:theme="@style/NoActionBarTheme" />
-        <activity android:name=".ui.RegisterActivity"  android:theme="@style/NoActionBarTheme" />
-        <activity android:name=".ui.WelcomeActivity"  android:theme="@style/NoActionBarTheme">
+
+        <activity
+            android:name=".ui.LoginActivity"
+            android:theme="@style/NoActionBarTheme" />
+
+        <activity
+            android:name=".ui.RegisterActivity"
+            android:theme="@style/NoActionBarTheme" />
+
+        <activity
+            android:name=".ui.WelcomeActivity"
+            android:theme="@style/NoActionBarTheme">
         </activity>
-        <activity android:name=".ui.ChatRoom">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.consult.MainActivity">
-            </meta-data>
-        </activity>
-        <activity android:name=".Chat"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
     </application>
 
 </manifest>
