--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -16,17 +15,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Consult">
-        <activity android:name=".ui.GroupChatActivity" android:theme="@style/NoActionBarTheme">
+        <activity android:name=".ui.PagerActivty"></activity>
+        <activity
+            android:name=".ui.GroupChatActivity"
+            android:theme="@style/NoActionBarTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.moringaschool.consult.ui.TextActivity" />
         </activity>
-
         <activity
             android:name=".ui.SplashScreen"
             android:theme="@style/NoActionBarTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -40,13 +42,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.moringaschool.consult.ui.Dashboard" />
         </activity>
-
         <activity android:name=".ui.WeekViewActivity" />
-
         <activity android:name=".ui.EventEditActivity" />
-
-        <activity android:name=".ui.MessageActivity" android:theme="@style/NoActionBarTheme">
-
+        <activity
+            android:name=".ui.MessageActivity"
+            android:theme="@style/NoActionBarTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.moringaschool.consult.ui.TextActivity" />
@@ -66,21 +66,19 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.moringaschool.consult.ui.UserProfile" />
         </activity>
-
         <activity android:name=".ui.UserProfile">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.moringaschool.consult.ui.Dashboard" />
         </activity>
-
         <activity android:name=".ui.Dashboard" />
-        <activity android:name=".ui.TextActivity" android:theme="@style/NoActionBarTheme">
-
+        <activity
+            android:name=".ui.TextActivity"
+            android:theme="@style/NoActionBarTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.moringaschool.consult.ui.Dashboard" />
         </activity>
-
         <activity
             android:name=".ui.LoginActivity"
             android:theme="@style/NoActionBarTheme" />
@@ -89,9 +87,7 @@
             android:theme="@style/NoActionBarTheme" />
         <activity
             android:name=".ui.WelcomeActivity"
-            android:theme="@style/NoActionBarTheme">
-
-        </activity>
+            android:theme="@style/NoActionBarTheme"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
@@ -105,7 +101,6 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="CHANNEL_ID" />
-
     </application>
 
 </manifest>
